fixing some whitespace issues

--- a/app/style.css
+++ b/app/style.css
@@ -25,7 +25,7 @@ ul {
 }
 
 li {
-  min-height: 2em;
+  min-height: 4em;
   background-color: #FFF;
   padding: 0.5em;
   border-radius: .4em;
@@ -39,7 +39,7 @@ img {
 }
 
 p {
-  width: 90%;
+  width: 80%;
   float: right;
 }
 
@@ -47,10 +47,20 @@ p {
   ul {
     max-width: 75%;
   }  
+  p {
+    max-width: 80%;
+  }
+  li {
+    min-height: 3.5em;
+  }
 }
 
 @media screen and (min-width: 1000px) {
   ul {
     max-width: 50%;
+  }
+
+  p {
+    pax-width: 90%;
   }
 }
